# IrateGoose

./: .gitignore  .rooignore  AGENTS.md  Cargo.toml  IrateGoose-x86_64.AppImage.zsync  Irate_Goose-x86_64.AppImage.zsync  LICENSE  README.md  agents.md  build_appdir.sh  build_appimage.sh  sink_template.conf  virtual_device.conf.template
.github/workflows/: rust.yml
data/: HRTF_Descriptions.csv  HRTF_Descriptions.csv.zst  barafu-irategoose.desktop.template  compress_to_zstd.sh  dev.barafu_albino.irate-goose.appdata.xml
docs/: goose_help.md
src/: app_gui.rs  config_manager.rs  descriptions.rs  file_manager.rs  goose.rs  icon_loader.rs  logging.rs  main.rs  settings.rs  wav_file_index.rs
src/app_gui/: files.rs  main_gui.rs  mod.rs  theme.rs
templates/: virtual_device.conf.template
