[package]
name = "irate_goose"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
env_logger = "0.11.8"
dirs = "6.0.0"
anyhow = "1.0.100"
log = "0.4.29"
rayon = "1.11.0"
regex = "1.11.0"
zstd = "0.13.3"
csv = "1.3.0"
egui_extras = "0.33.3"
clap = { version = "4.5.54", features = ["derive", "unicode"] }

[profile.release]
strip = true #Remove extra symbols
opt-level = "s" #Optimize for size
lto = true #Enable linker optimizations
codegen-units=1 #Maximise optimizations
