[package]
name = "irate_goose"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Barafu/IrateGoose"
publish = false
license = "MIT"
description = "A GUI to configure virtual surround sound capabilities of Pipewire"

[dependencies]
eframe = { version = "0.33.3", features = ["serde"] }
env_logger = "0.11.8"
dirs = "6.0.0"
anyhow = "1.0.100"
log = "0.4.29"
rayon = "1.11.0"
regex = "1.11.0"
zstd = "0.13.3"
csv = "1.3.0"
egui_extras = "0.33.3"
clap = { version = "4.5.54", features = ["derive", "unicode"] }
image = "0.25.9"
toml = "0.9.11"
serde = { version = "1.0.228", features = ["derive"] }
egui = { version = "0.33.3", features = ["serde"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3", "std"] }
rfd = { version = "0.17.2", features = ["xdg-portal"] }

[profile.release]
strip = true #Remove extra symbols
opt-level = "s" #Optimize for size
lto = true #Enable linker optimizations
codegen-units=1 #Maximise optimizations

[profile.dev]
panic = "unwind"  # This ensures backtraces work


[dev-dependencies]
tempfile = "3.24.0"
